Tower Siege-1 updated

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="Box.js"></script>
     <script src="Slingshot.js"></script>
     <script src="polygon.js"></script>
+    <!-- <script src="trial.js"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 </head>
